tests/testdata/errors/undefined_function.pine
// Test calling undefined function - should fail

var x = undefinedFunction(10)

// Expected error:
// error [unknown-function] 3:26: unknown function `undefinedFunction`
